; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/mach-at32ap/extr_extint.c_nmi_disable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/mach-at32ap/extr_extint.c_nmi_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nmi_eic = common dso_local global i64 0, align 8
@NMIC = common dso_local global i32 0, align 4
@nmi_enabled = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nmi_disable() #0 {
  %1 = load i64, i64* @nmi_eic, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = load i64, i64* @nmi_eic, align 8
  %5 = load i32, i32* @NMIC, align 4
  %6 = call i32 @eic_writel(i64 %4, i32 %5, i32 0)
  br label %7

7:                                                ; preds = %3, %0
  store i32 0, i32* @nmi_enabled, align 4
  ret void
}

declare dso_local i32 @eic_writel(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
